--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce Product Page</title>
+    <title>Our Products - Awesome Shop!</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Inter font -->
@@ -22,107 +22,181 @@
             font-family: 'Inter', sans-serif;
             background-color: #f0f2f5; /* Light gray background */
         }
-        /* Custom styles for demonstration if needed, though Tailwind should cover most */
     </style>
 </head>
 <body class="flex flex-col min-h-screen">
     <!-- Header -->
-    <header class="bg-white shadow-md p-4 sticky top-0 z-10">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold text-gray-800">My Awesome Shop</h1>
+    <header class="bg-gradient-to-r from-blue-600 to-indigo-700 shadow-lg p-4 sticky top-0 z-10">
+        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
+            <h1 class="text-3xl font-bold text-white mb-2 md:mb-0">Explore Our Amazing Products</h1>
             <nav>
                 <ul class="flex space-x-4">
-                    <li><a href="#" class="text-gray-600 hover:text-blue-600">Home</a></li>
-                    <li><a href="#" class="text-gray-600 hover:text-blue-600">Products</a></li>
-                    <li><a href="#" class="text-gray-600 hover:text-blue-600">Contact</a></li>
+                    <li><a href="#" class="text-white hover:text-blue-200 transition duration-200">Home</a></li>
+                    <li><a href="#" class="text-white hover:text-blue-200 transition duration-200">Shop All</a></li>
+                    <li><a href="#" class="text-white hover:text-blue-200 transition duration-200">About Us</a></li>
+                    <li><a href="#" class="text-white hover:text-blue-200 transition duration-200">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Main Content Area -->
-    <main class="flex-grow container mx-auto p-4 md:p-8 flex items-center justify-center">
-        <div class="bg-white rounded-lg shadow-xl p-6 md:p-8 w-full max-w-2xl flex flex-col md:flex-row items-center space-y-6 md:space-y-0 md:space-x-8">
-            <!-- Product Image -->
-            <div class="w-full md:w-1/2 flex justify-center">
-                <img src="https://placehold.co/400x400/94a3b8/ffffff?text=Product+Image" alt="Placeholder Product Image" class="rounded-lg shadow-md max-w-full h-auto object-cover">
-            </div>
-
-            <!-- Product Details -->
-            <div class="w-full md:w-1/2 text-center md:text-left">
-                <h2 class="text-3xl font-semibold text-gray-800 mb-3">Amazing Gadget Pro</h2>
-                <p class="text-gray-600 mb-4 text-lg">
-                    Discover the ultimate gadget experience with its cutting-edge features and sleek design. Perfect for everyday use and special occasions.
-                </p>
-                <div class="flex items-center justify-center md:justify-start mb-5">
-                    <span class="text-4xl font-bold text-blue-600 mr-2">$199.99</span>
-                    <span class="text-lg text-gray-400 line-through">$249.99</span>
+    <!-- Main Content Area - Three Products -->
+    <main class="flex-grow container mx-auto p-4 md:p-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Product 1 Card -->
+            <div class="bg-white rounded-xl shadow-xl p-6 flex flex-col items-center text-center transform transition-all duration-300 ease-in-out hover:scale-[1.01] hover:shadow-2xl">
+                <img src="https://placehold.co/400x300/4CAF50/ffffff?text=Smartwatch" alt="Smartwatch" class="rounded-lg shadow-md mb-4 max-w-full h-auto object-cover border border-gray-200">
+                <h3 class="text-2xl font-bold text-gray-900 mb-2">Revolutionary Smartwatch</h3>
+                <p class="text-gray-700 mb-4 flex-grow">Track your fitness, receive notifications, and stay connected with style.</p>
+                <div class="flex items-center justify-center mb-6">
+                    <span class="text-3xl font-bold text-green-700 mr-2">$149.99</span>
+                    <span class="text-lg text-gray-400 line-through">$199.99</span>
                 </div>
-
-                <!-- Buy Now Button -->
-                <button
-                    id="buyNowButton"
-                    class="w-full md:w-auto px-8 py-3 bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 transition duration-300 ease-in-out transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-75 mb-4"
-                >
-                    Buy Now
-                </button>
-
-                <!-- Next Page Button -->
-                <button
-                    id="nextPageButton"
-                    class="w-full md:w-auto px-8 py-3 bg-gray-200 text-gray-800 font-semibold rounded-lg shadow-md hover:bg-gray-300 transition duration-300 ease-in-out transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-75"
-                >
-                    Next Product
-                </button>
+                <div class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-3 w-full">
+                    <button
+                        id="buyNowButton1"
+                        class="flex-1 px-5 py-3 bg-green-600 text-white font-bold rounded-full shadow-lg hover:bg-green-700 transition duration-300 ease-in-out transform hover:-translate-y-0.5 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-green-300 focus:ring-opacity-75"
+                    >
+                        <span class="inline-block mr-1">🛒</span> Buy Now
+                    </button>
+                    <button
+                        id="viewDetailsButton1"
+                        class="flex-1 px-5 py-3 bg-gray-200 text-gray-800 font-semibold rounded-full shadow-lg hover:bg-gray-300 transition duration-300 ease-in-out transform hover:-translate-y-0.5 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-gray-300 focus:ring-opacity-75"
+                    >
+                        <span class="inline-block mr-1">👁️</span> View Details
+                    </button>
+                </div>
             </div>
+
+            <!-- Product 2 Card -->
+            <div class="bg-white rounded-xl shadow-xl p-6 flex flex-col items-center text-center transform transition-all duration-300 ease-in-out hover:scale-[1.01] hover:shadow-2xl">
+                <img src="https://placehold.co/400x300/FF9800/ffffff?text=Wireless+Headphones" alt="Wireless Headphones" class="rounded-lg shadow-md mb-4 max-w-full h-auto object-cover border border-gray-200">
+                <h3 class="text-2xl font-bold text-gray-900 mb-2">Premium Wireless Headphones</h3>
+                <p class="text-gray-700 mb-4 flex-grow">Immerse yourself in rich, crystal-clear audio with unparalleled comfort.</p>
+                <div class="flex items-center justify-center mb-6">
+                    <span class="text-3xl font-bold text-orange-700 mr-2">$99.99</span>
+                    <span class="text-lg text-gray-400 line-through">$129.99</span>
+                </div>
+                <div class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-3 w-full">
+                    <button
+                        id="buyNowButton2"
+                        class="flex-1 px-5 py-3 bg-orange-600 text-white font-bold rounded-full shadow-lg hover:bg-orange-700 transition duration-300 ease-in-out transform hover:-translate-y-0.5 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-orange-300 focus:ring-opacity-75"
+                    >
+                        <span class="inline-block mr-1">🛒</span> Buy Now
+                    </button>
+                    <button
+                        id="viewDetailsButton2"
+                        class="flex-1 px-5 py-3 bg-gray-200 text-gray-800 font-semibold rounded-full shadow-lg hover:bg-gray-300 transition duration-300 ease-in-out transform hover:-translate-y-0.5 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-gray-300 focus:ring-opacity-75"
+                    >
+                        <span class="inline-block mr-1">👁️</span> View Details
+                    </button>
+                </div>
+            </div>
+
+            <!-- Product 3 Card -->
+            <div class="bg-white rounded-xl shadow-xl p-6 flex flex-col items-center text-center transform transition-all duration-300 ease-in-out hover:scale-[1.01] hover:shadow-2xl">
+                <img src="https://placehold.co/400x300/F44336/ffffff?text=Gaming+Mouse" alt="Gaming Mouse" class="rounded-lg shadow-md mb-4 max-w-full h-auto object-cover border border-gray-200">
+                <h3 class="text-2xl font-bold text-gray-900 mb-2">High-Performance Gaming Mouse</h3>
+                <p class="text-gray-700 mb-4 flex-grow">Gain the competitive edge with precision tracking and customizable buttons.</p>
+                <div class="flex items-center justify-center mb-6">
+                    <span class="text-3xl font-bold text-red-700 mr-2">$59.99</span>
+                    <span class="text-lg text-gray-400 line-through">$79.99</span>
+                </div>
+                <div class="flex flex-col sm:flex-row space-y-3 sm:space-y-0 sm:space-x-3 w-full">
+                    <button
+                        id="buyNowButton3"
+                        class="flex-1 px-5 py-3 bg-red-600 text-white font-bold rounded-full shadow-lg hover:bg-red-700 transition duration-300 ease-in-out transform hover:-translate-y-0.5 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-red-300 focus:ring-opacity-75"
+                    >
+                        <span class="inline-block mr-1">🛒</span> Buy Now
+                    </button>
+                    <button
+                        id="viewDetailsButton3"
+                        class="flex-1 px-5 py-3 bg-gray-200 text-gray-800 font-semibold rounded-full shadow-lg hover:bg-gray-300 transition duration-300 ease-in-out transform hover:-translate-y-0.5 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-gray-300 focus:ring-opacity-75"
+                    >
+                        <span class="inline-block mr-1">👁️</span> View Details
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Global Next Page Button (for browsing more products, if applicable) -->
+        <div class="text-center mt-10">
+            <button
+                id="loadMoreProductsButton"
+                class="px-10 py-4 bg-blue-600 text-white font-semibold rounded-full shadow-lg hover:bg-blue-700 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:ring-opacity-75"
+            >
+                <span class="inline-block mr-2">➡️</span> Load More Products
+            </button>
         </div>
     </main>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white p-4 mt-8">
-        <div class="container mx-auto text-center">
-            <p>&copy; 2025 My Awesome Shop. All rights reserved.</p>
+    <footer class="bg-gray-900 text-white p-6 mt-8">
+        <div class="container mx-auto text-center text-sm">
+            <p>&copy; 2025 Awesome Shop. All rights reserved. | <a href="#" class="hover:underline text-blue-300">Terms of Service</a></p>
         </div>
     </footer>
 
     <script>
-        // JavaScript for button interactions
-        document.getElementById('buyNowButton').addEventListener('click', function() {
-            // In a real application, this would trigger an add-to-cart or checkout process.
-            alert('Thank you for your purchase! (This is a placeholder action)');
-        });
-
-        document.getElementById('nextPageButton').addEventListener('click', function() {
-            // In a real application, this would navigate to the next product page or load new product data.
-            alert('Loading next product... (This is a placeholder action)');
-            // For a real next page, you would typically change window.location.href or fetch new product data via AJAX.
-        });
-
-        // Simple alert replacement for demonstration purposes (as alert() is disabled)
-        function alert(message) {
+        // Custom alert function to replace native alert() for a better user experience
+        function showCustomAlert(message) {
             const body = document.body;
             let messageBox = document.getElementById('customMessageBox');
 
+            // Create the message box element if it doesn't already exist
             if (!messageBox) {
                 messageBox = document.createElement('div');
                 messageBox.id = 'customMessageBox';
-                messageBox.className = 'fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50';
+                messageBox.className = 'fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center p-4 z-[100] transition-opacity duration-300 opacity-0 pointer-events-none';
                 messageBox.innerHTML = `
-                    <div class="bg-white p-6 rounded-lg shadow-xl max-w-sm w-full text-center">
-                        <p id="messageBoxContent" class="text-gray-800 text-lg mb-4"></p>
-                        <button id="messageBoxCloseButton" class="px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">OK</button>
+                    <div class="bg-white p-8 rounded-xl shadow-2xl max-w-sm w-full text-center transform scale-95 transition-transform duration-300">
+                        <p id="messageBoxContent" class="text-gray-800 text-xl font-semibold mb-6"></p>
+                        <button id="messageBoxCloseButton" class="px-8 py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out focus:outline-none focus:ring-4 focus:ring-blue-300">Got It!</button>
                     </div>
                 `;
                 body.appendChild(messageBox);
 
+                // Add event listener to close button
                 document.getElementById('messageBoxCloseButton').addEventListener('click', function() {
-                    messageBox.classList.add('hidden');
+                    messageBox.classList.add('opacity-0', 'pointer-events-none');
+                    messageBox.querySelector('div').classList.remove('scale-100');
+                    messageBox.querySelector('div').classList.add('scale-95');
                 });
             }
 
+            // Set the message content and show the box with transition
             document.getElementById('messageBoxContent').textContent = message;
-            messageBox.classList.remove('hidden');
+            messageBox.classList.remove('opacity-0', 'pointer-events-none');
+            messageBox.querySelector('div').classList.remove('scale-95');
+            messageBox.querySelector('div').classList.add('scale-100');
         }
+
+        // Event listeners for "Buy Now" buttons
+        document.getElementById('buyNowButton1').addEventListener('click', function() {
+            showCustomAlert('Smartwatch added to cart! Proceeding to checkout.');
+        });
+        document.getElementById('buyNowButton2').addEventListener('click', function() {
+            showCustomAlert('Wireless Headphones added to cart! Proceeding to checkout.');
+        });
+        document.getElementById('buyNowButton3').addEventListener('click', function() {
+            showCustomAlert('Gaming Mouse added to cart! Proceeding to checkout.');
+        });
+
+        // Event listeners for "View Details" buttons
+        document.getElementById('viewDetailsButton1').addEventListener('click', function() {
+            showCustomAlert('Viewing details for Revolutionary Smartwatch. (This would load a product detail page)');
+        });
+        document.getElementById('viewDetailsButton2').addEventListener('click', function() {
+            showCustomAlert('Viewing details for Premium Wireless Headphones. (This would load a product detail page)');
+        });
+        document.getElementById('viewDetailsButton3').addEventListener('click', function() {
+            showCustomAlert('Viewing details for High-Performance Gaming Mouse. (This would load a product detail page)');
+        });
+
+        // Event listener for the global "Load More Products" button
+        document.getElementById('loadMoreProductsButton').addEventListener('click', function() {
+            showCustomAlert('Loading more products! (This would fetch and display additional items)');
+        });
     </script>
 </body>
 </html>
